--- a/xcolor-solarized.sty
+++ b/xcolor-solarized.sty
@@ -1,33 +1,32 @@
-%% 
+%%
 %% Copyright (C) 2014 by Julien Cretel <jubobs.tex at gmail.com>
-%% 
+%%
 %% This work may be distributed and/or modified under the
 %% conditions of the LaTeX Project Public License, either version 1.3
 %% of this license or (at your option) any later version.
 %% The latest version of this license is in
-%% 
+%%
 %%     http://www.latex-project.org/lppl.txt
-%% 
+%%
 %% and version 1.3 or later is part of all distributions of LaTeX
 %% version 2005/12/01 or later.
-%% 
+%%
 %% This work has the LPPL maintenance status `maintained'.
-%% 
+%%
 %% The Current Maintainer of this work is Julien Cretel.
-%% 
+%%
 %% This work currently consists of the file xcolor-solarized.sty.
-%% 
+%%
 % --- Package identification ---
 \NeedsTeXFormat{LaTeX2e}[2011/06/27]
 \ProvidesPackage{xcolor-solarized}%
  [2014/03/17 v0.1 xcolor definitions for Ethan Schoonover's Solarized theme]
 
 % --- Discard any option passed to the package ---
-\DeclareOption*%
-{%
+\DeclareOption*{%
   \OptionNotUsed
   \PackageWarning{xcolor-solarized}{Unknown `\CurrentOption' option}
-}  
+}
 
 % --- Process options ---
 \ProcessOptions\relax
