--- a/xcolor-solarized.sty
+++ b/xcolor-solarized.sty
@@ -1,5 +1,5 @@
 %%
-%% Copyright (C) 2014 by Julien Cretel <jubobs.tex at gmail.com>
+%% Copyright (C) 2015 by Julien Cretel <jubobs.tex at gmail.com>
 %%
 %% This work may be distributed and/or modified under the
 %% conditions of the LaTeX Project Public License, either version 1.3
@@ -20,42 +20,74 @@
 % --- Package identification ---
 \NeedsTeXFormat{LaTeX2e}[2011/06/27]
 \ProvidesPackage{xcolor-solarized}%
- [2014/03/17 v0.1 xcolor definitions for Ethan Schoonover's Solarized theme]
-
-% --- Discard any option passed to the package ---
-\DeclareOption*{%
-  \OptionNotUsed
-  \PackageWarning{xcolor-solarized}{Unknown `\CurrentOption' option}
-}
-
-% --- Process options ---
-\ProcessOptions\relax
+ [2015/02/14 v0.2 xcolor definitions for Ethan Schoonover's Solarized theme]
 
 % --- Package dependencies ---
 \RequirePackage{xcolor}[2007/01/21]
+\RequirePackage{kvoptions}
 
-% --- prefix ---
-\newcommand\prefix@solarized{solarized-}
+% --- options ---
+\SetupKeyvalOptions{
+  family=solarized,
+  prefix=solarized@
+}
 
-% --- helper macro ---
-\newcommand\definecolor@solarized{\expandafter\definecolor\expandafter}
+\DeclareStringOption[solarized-]{prefix}
+
+\DeclareDefaultOption{%
+  \OptionNotUsed
+  \PackageError{xcolor-solarized}{Unknown `\CurrentOption' option}
+}
+
+\ProcessKeyvalOptions*
+
+% --- helper macro for defining the colours of the Solarized palette ---
+\newcommand\solarized@definecolor{\expandafter\definecolor\expandafter}
 
 % --- color definitions ---
-\definecolor@solarized{\prefix@solarized base03} {RGB}{000, 043, 054}
-\definecolor@solarized{\prefix@solarized base02} {RGB}{007, 054, 066}
-\definecolor@solarized{\prefix@solarized base01} {RGB}{088, 110, 117}
-\definecolor@solarized{\prefix@solarized base00} {RGB}{101, 123, 131}
-\definecolor@solarized{\prefix@solarized base0}  {RGB}{131, 148, 150}
-\definecolor@solarized{\prefix@solarized base1}  {RGB}{147, 161, 161}
-\definecolor@solarized{\prefix@solarized base2}  {RGB}{238, 232, 213}
-\definecolor@solarized{\prefix@solarized base3}  {RGB}{253, 246, 227}
-\definecolor@solarized{\prefix@solarized yellow} {RGB}{181, 137, 000}
-\definecolor@solarized{\prefix@solarized orange} {RGB}{203, 075, 022}
-\definecolor@solarized{\prefix@solarized red}    {RGB}{220, 050, 047}
-\definecolor@solarized{\prefix@solarized magenta}{RGB}{211, 054, 130}
-\definecolor@solarized{\prefix@solarized violet} {RGB}{108, 113, 196}
-\definecolor@solarized{\prefix@solarized blue}   {RGB}{038, 139, 210}
-\definecolor@solarized{\prefix@solarized cyan}   {RGB}{042, 161, 152}
-\definecolor@solarized{\prefix@solarized green}  {RGB}{133, 153, 000}
+\solarized@definecolor{\solarized@prefix base03} {RGB}{000, 043, 054}
+\solarized@definecolor{\solarized@prefix base02} {RGB}{007, 054, 066}
+\solarized@definecolor{\solarized@prefix base01} {RGB}{088, 110, 117}
+\solarized@definecolor{\solarized@prefix base00} {RGB}{101, 123, 131}
+\solarized@definecolor{\solarized@prefix base0}  {RGB}{131, 148, 150}
+\solarized@definecolor{\solarized@prefix base1}  {RGB}{147, 161, 161}
+\solarized@definecolor{\solarized@prefix base2}  {RGB}{238, 232, 213}
+\solarized@definecolor{\solarized@prefix base3}  {RGB}{253, 246, 227}
+\solarized@definecolor{\solarized@prefix yellow} {RGB}{181, 137, 000}
+\solarized@definecolor{\solarized@prefix orange} {RGB}{203, 075, 022}
+\solarized@definecolor{\solarized@prefix red}    {RGB}{220, 050, 047}
+\solarized@definecolor{\solarized@prefix magenta}{RGB}{211, 054, 130}
+\solarized@definecolor{\solarized@prefix violet} {RGB}{108, 113, 196}
+\solarized@definecolor{\solarized@prefix blue}   {RGB}{038, 139, 210}
+\solarized@definecolor{\solarized@prefix cyan}   {RGB}{042, 161, 152}
+\solarized@definecolor{\solarized@prefix green}  {RGB}{133, 153, 000}
+
+% --- macro for printing the Solarized palette (as a guide) ---
+\newcommand\solarizedPalette[1][3]{%
+  \def\@tempa{\rule{#1em}{#1em}}
+  \noindent
+  \begin{tabular}{cccc cccc}
+    \textcolor{solarized-base03} \@tempa &
+    \textcolor{solarized-base02} \@tempa &
+    \textcolor{solarized-base01} \@tempa &
+    \textcolor{solarized-base00} \@tempa &
+    \textcolor{solarized-base0}  \@tempa &
+    \textcolor{solarized-base1}  \@tempa &
+    \textcolor{solarized-base2}  \@tempa &
+    \textcolor{solarized-base3}  \@tempa \\
+    base03 & base02 & base01 & base00 &
+    base0  & base1  & base2  & base3     \\[#1em]
+    \textcolor{solarized-yellow} \@tempa &
+    \textcolor{solarized-orange} \@tempa &
+    \textcolor{solarized-red}    \@tempa &
+    \textcolor{solarized-magenta}\@tempa &
+    \textcolor{solarized-violet} \@tempa &
+    \textcolor{solarized-blue}   \@tempa &
+    \textcolor{solarized-cyan}   \@tempa &
+    \textcolor{solarized-green}  \@tempa \\
+    yellow & orange & red  & magenta &
+    violet & blue   & cyan & green
+  \end{tabular}
+}
 
 \endinput
