--- a/xcolor-solarized.sty
+++ b/xcolor-solarized.sty
@@ -1,50 +1,50 @@
 %%
-%% Copyright (C) 2015 by Julien Cretel <jubobs.tex at gmail.com>
+%% This is file `xcolor-solarized.sty',
+%% generated with the docstrip utility.
 %%
+%% The original source files were:
+%%
+%% xcolor-solarized.dtx  (with options: `package')
+%% 
+%% This is a generated file.
+%% 
+%% Copyright (C) 2014 by Julien Cretel <jubobs.tex at gmail.com>
+%% 
 %% This work may be distributed and/or modified under the
 %% conditions of the LaTeX Project Public License, either version 1.3
 %% of this license or (at your option) any later version.
 %% The latest version of this license is in
-%%
+%% 
 %%     http://www.latex-project.org/lppl.txt
-%%
+%% 
 %% and version 1.3 or later is part of all distributions of LaTeX
 %% version 2005/12/01 or later.
-%%
+%% 
 %% This work has the LPPL maintenance status `maintained'.
-%%
+%% 
 %% The Current Maintainer of this work is Julien Cretel.
-%%
-%% This work currently consists of the file xcolor-solarized.sty.
-%%
-% --- Package identification ---
+%% 
+%% This work currently consists of the files xcolor-solarized.dtx,
+%% xcolor-solarized.ins, and the derived file xcolor-solarized.sty.
+%% 
+
 \NeedsTeXFormat{LaTeX2e}[2011/06/27]
-\ProvidesPackage{xcolor-solarized}%
- [2015/02/14 v0.2 xcolor definitions for Ethan Schoonover's Solarized theme]
-
-% --- Package dependencies ---
+\ProvidesPackage{xcolor-solarized}
+  [2015/02/17 v0.3 xcolor definitions for Ethan Schoonover's
+   Solarized theme]
 \RequirePackage{xcolor}[2007/01/21]
-\RequirePackage{kvoptions}
-
-% --- options ---
+\RequirePackage{kvoptions}[2011/06/30]
 \SetupKeyvalOptions{
   family=solarized,
   prefix=solarized@
 }
-
 \DeclareStringOption[solarized-]{prefix}
-
 \DeclareDefaultOption{%
   \OptionNotUsed
   \PackageError{xcolor-solarized}{Unknown `\CurrentOption' option}
 }
-
 \ProcessKeyvalOptions*
-
-% --- helper macro for defining the colours of the Solarized palette ---
 \newcommand\solarized@definecolor{\expandafter\definecolor\expandafter}
-
-% --- color definitions ---
 \solarized@definecolor{\solarized@prefix base03} {RGB}{000, 043, 054}
 \solarized@definecolor{\solarized@prefix base02} {RGB}{007, 054, 066}
 \solarized@definecolor{\solarized@prefix base01} {RGB}{088, 110, 117}
@@ -61,33 +61,32 @@
 \solarized@definecolor{\solarized@prefix blue}   {RGB}{038, 139, 210}
 \solarized@definecolor{\solarized@prefix cyan}   {RGB}{042, 161, 152}
 \solarized@definecolor{\solarized@prefix green}  {RGB}{133, 153, 000}
-
-% --- macro for printing the Solarized palette (as a guide) ---
-\newcommand\solarizedPalette[1][3]{%
-  \def\@tempa{\rule{#1em}{#1em}}
+\newcommand\solarizedPalette[1][3em]{%
+  \newcommand\solarized@square{\rule{#1}{#1}}
   \noindent
   \begin{tabular}{cccc cccc}
-    \textcolor{solarized-base03} \@tempa &
-    \textcolor{solarized-base02} \@tempa &
-    \textcolor{solarized-base01} \@tempa &
-    \textcolor{solarized-base00} \@tempa &
-    \textcolor{solarized-base0}  \@tempa &
-    \textcolor{solarized-base1}  \@tempa &
-    \textcolor{solarized-base2}  \@tempa &
-    \textcolor{solarized-base3}  \@tempa \\
+    \textcolor{solarized-base03} \solarized@square &
+    \textcolor{solarized-base02} \solarized@square &
+    \textcolor{solarized-base01} \solarized@square &
+    \textcolor{solarized-base00} \solarized@square &
+    \textcolor{solarized-base0}  \solarized@square &
+    \textcolor{solarized-base1}  \solarized@square &
+    \textcolor{solarized-base2}  \solarized@square &
+    \textcolor{solarized-base3}  \solarized@square \\
     base03 & base02 & base01 & base00 &
-    base0  & base1  & base2  & base3     \\[#1em]
-    \textcolor{solarized-yellow} \@tempa &
-    \textcolor{solarized-orange} \@tempa &
-    \textcolor{solarized-red}    \@tempa &
-    \textcolor{solarized-magenta}\@tempa &
-    \textcolor{solarized-violet} \@tempa &
-    \textcolor{solarized-blue}   \@tempa &
-    \textcolor{solarized-cyan}   \@tempa &
-    \textcolor{solarized-green}  \@tempa \\
-    yellow & orange & red  & magenta &
-    violet & blue   & cyan & green
+    base0  & base1  & base2  & base3               \\[#1]
+    \textcolor{solarized-yellow} \solarized@square &
+    \textcolor{solarized-orange} \solarized@square &
+    \textcolor{solarized-red}    \solarized@square &
+    \textcolor{solarized-magenta}\solarized@square &
+    \textcolor{solarized-violet} \solarized@square &
+    \textcolor{solarized-blue}   \solarized@square &
+    \textcolor{solarized-cyan}   \solarized@square &
+    \textcolor{solarized-green}  \solarized@square \\
+    yellow & orange & red    & magenta &
+    violet & blue   & cyan   & green
   \end{tabular}
 }
-
 \endinput
+%%
+%% End of file `xcolor-solarized.sty'.
