--- a/xcolor-solarized.dtx
+++ b/xcolor-solarized.dtx
@@ -1,7 +1,7 @@
 % \iffalse meta-comment
 
 %
-% Copyright (C) 2015 by Julien Cretel
+% Copyright (C) 2016 by Julien Cretel
 %                       <jubobs.tex at gmail.com>
 %
 % This work may be distributed and/or modified under the
@@ -19,7 +19,7 @@
 % \iffalse
 %<package>\NeedsTeXFormat{LaTeX2e}[2011/06/27]
 %<package>\ProvidesPackage{xcolor-solarized}
-%<package>  [2015/08/13 v0.4 xcolor definitions for Ethan Schoonover's
+%<package>  [2016/08/05 v0.4 xcolor definitions for Ethan Schoonover's
 %<package>   Solarized theme]
 %
 %<*driver>
@@ -69,6 +69,7 @@
 % \changes{v0.1}{2014/04/24}{Initial release on GitHub}
 % \changes{v0.2}{2015/02/14}{Major refactoring of the code}
 % \changes{v0.3}{2015/02/17}{Submission to CTAN}
+% \changes{v0.4}{2016/08/05}{Bugfix: remove hardcoding of default prefix}
 %
 % \GetFileInfo{xcolor-solarized.sty}
 %
